@@ -1,4 +1,4 @@
-$Id: Hybrid-team,v 1.21 2001/07/02 03:55:44 joant Exp $
+$Id: Hybrid-team,v 1.22 2001/08/01 03:31:26 lusky Exp $
 
   The hybrid team is a group of ircd coders who were frustrated
 with the instability and all-out "dirtiness" of the EFnet ircd's
@@ -44,7 +44,7 @@ David-T       David Taylor       <davidt@yadt.co.uk>
 echo          Adam J. Durana     <adam@caca.com>
 fl_           Lee Hardy          <leeh@shagged.org>
 FlashMan      Craig A. Huegen    <chuegen@quadrunner.com>
-Hwy101        Walter Campbell    <wcampbel@botbay.net>
+Hwy101        W. Campbell        <wcampbel@botbay.net>
 jailbird      Dustin Marquess    <jailbird@alcatraz.fdf.net>
 johan         Johannes Erdfelt   <jerdfelt@eng.mindspring.net>
 koitsu/k9     Jeremy Chadwick    <jdc@best.net>
@@ -59,7 +59,7 @@ Taner         Taner Halicioglu   <taner@cerf.net>
 ThemBones     Brian Kraemer      <kraemer@u.washington.edu>
 White_Dragon  Chip Norkus        <wd@dal.net>
 WintrHawk     Jake Khuon         <khuon@GCtr.Net>
-              Piotr Kucharski    <chopin@sgh.waw.pl>
+Beeth         Piotr Kucharski    <chopin@sgh.waw.pl>
  
 Developers and Contributors for previous versions:
  
