@@ -111,5 +111,5 @@ later modified by jto@tolsun.oulu.fi.
 .LP
 modified for ircd-hybrid-7 by Edward Brocklesby, ejb@klamath.uucp.leguin.org.uk.
 .LP
-backported for ircd-hybrid-6.1 by Walter Campbell, wcampbel@botbay.net.
+backported for ircd-hybrid-6.1 by W. Campbell, wcampbel@botbay.net.
 
