@@ -2,23 +2,17 @@
 ** copyright 1991, all rights reserved.
 ** You can use this code as long as my name stays with it.
 **
-** md5 patch by Walter Campbell <wcampbel@botbay.net>
+** md5 patch by W. Campbell <wcampbel@botbay.net>
 ** Modernization, getopt, etc for the Hybrid IRCD team
+** by W. Campbell
 **
-** $Id: mkpasswd.c,v 1.9 2001/07/18 03:10:01 lusky Exp $
+** $Id: mkpasswd.c,v 1.13 2001/10/17 20:00:25 wcampbel Exp $
 */
-
-#include "setup.h"
-
 #include <stdio.h>
 #include <string.h>
 #include <stdlib.h>
 #include <time.h>
 #include <unistd.h>
-#ifdef HAVE_CRYPT_H
-#include <crypt.h>
-#endif
-
 
 #define FLAG_MD5     0x00000001
 #define FLAG_DES     0x00000002
@@ -26,11 +20,13 @@
 #define FLAG_PASS    0x00000008
 #define FLAG_LENGTH  0x00000010
 
+extern char *getpass();
+extern char *crypt();
 
-char *make_des_salt(void);
+char *make_des_salt();
 char *make_md5_salt(int);
 char *make_md5_salt_para(char *);
-void usage(void);
+void usage();
 static char saltChars[] = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789./";
 
 int main(int argc, char *argv[])
@@ -78,28 +74,40 @@ int main(int argc, char *argv[])
     }
   }
 
-  if (flag & FLAG_MD5) {
+  if (flag & FLAG_MD5)
+  {
     if (flag & FLAG_SALT)
       salt = make_md5_salt_para(saltpara);
     else
       salt = make_md5_salt(length);
-  } else {
-    if (flag & FLAG_SALT) {
-      if ((strlen(saltpara) == 2)) {
+  }
+  else
+  {
+    if (flag & FLAG_SALT)
+    {
+      if ((strlen(saltpara) == 2))
+      {
         salt = saltpara;
-      } else {
+      }
+      else
+      {
         printf("Invalid salt, please enter 2 alphanumeric characters\n");
         exit(1);
       }
-    } else {
+    }
+    else
+    {
       salt = make_des_salt();
     }
   }
 
-  if (flag & FLAG_PASS) {
+  if (flag & FLAG_PASS)
+  {
     if (!plaintext)
       printf("Please enter a valid password\n");
-  } else {
+  }
+  else
+  {
     plaintext = getpass("plaintext: ");
   }
 
@@ -107,23 +115,25 @@ int main(int argc, char *argv[])
   return 0;
 }
 
-char *make_des_salt(void)
+char *make_des_salt()
 {
   static char salt[3];
-  char* saltptr=salt;
   salt[0] = saltChars[random() % 64];
   salt[1] = saltChars[random() % 64];
   salt[2] = '\0';
-  return saltptr;
+  return salt;
 }
 
 char *make_md5_salt_para(char *saltpara)
 {
   static char salt[21];
-  char* saltptr=salt;
-  if (saltpara && (strlen(saltpara) <= 16)) {
+  if (saltpara && (strlen(saltpara) <= 16))
+  {
+    /* sprintf used because of portability requirements, the length
+    ** is checked above, so it should not be too much of a concern
+    */
     sprintf(salt, "$1$%s$", saltpara);
-    return saltptr;
+    return salt;
   }
   printf("Invalid Salt, please use up to 16 random alphanumeric characters\n");
   exit(1);
@@ -136,8 +146,8 @@ char *make_md5_salt(int length)
 {
   static char salt[21];
   int i;
-  char* saltptr=salt;
-  if (length > 16) {
+  if (length > 16)
+  {
     printf("MD5 salt length too long\n");
     exit(0);
   }
@@ -148,10 +158,10 @@ char *make_md5_salt(int length)
     salt[i] = saltChars[random() % 64];
   salt[length+3] = '$';
   salt[length+4] = '\0';
-  return saltptr;
+  return salt;
 }
 
-void usage(void)
+void usage()
 {
   printf("mkpasswd [-m|-d] [-l saltlength] [-s salt] [-p plaintext]\n");
   printf("-m Generate an MD5 password\n");
