@@ -1,3 +1,7 @@
+*** 20011024_4 by wcampbel
+Misc doc cleanups (approved by Diane)
+
+
 *** 20011024_3 by db
 - removed NO_CHANOPS_ON_SPLIT
 
